--- a/[60]250527/60.Langchain도구.ipynb
+++ b/[60]250527/60.Langchain도구.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f2dbb196",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "c3bcc6d2",
    "metadata": {},
    "outputs": [
@@ -102,88 +102,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "eae8094b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
     "from pydantic import BaseModel, Field\n",
     "\n",
-    "# 입력 스키마\n",
+    "# 입력 스키마 정의\n",
     "class WeatherInput(BaseModel):\n",
-    "    city: str = Field(description = \"날씨를 조회할 도시 이름(영문)\")\n",
-    "    \n",
-    "# 날씨정보 조회 함수\n",
+    "    city: str = Field(description=\"날씨를 조회할 도시 이름 (영문)\")\n",
+    "\n",
     "def get_weather(city: str) -> str:\n",
-    "    import requests\n",
+    "    \"\"\"주어진 도시의 현재 날씨를 반환합니다.\"\"\"\n",
     "    api_key = os.getenv(\"OPEN_WEATHER_MAP\")\n",
     "    url = \"http://api.openweathermap.org/data/2.5/weather\"\n",
     "    params = {\n",
-    "        \"q\":city,\n",
-    "        \"appid\":api_key,\n",
-    "        \"units\": \"metric\", #섭씨온도\n",
-    "        \"lang\": \"kr\"\n",
+    "        \"q\": city,\n",
+    "        \"appid\": api_key,\n",
+    "        \"units\": \"metric\",      # 섭씨 온도\n",
+    "        \"lang\": \"kr\"            # 한국어 응답 (설명이 한국어로 오도록)\n",
     "    }\n",
-    "    response = requests.get(url,params=params)\n",
+    "    response = requests.get(url, params=params)\n",
     "    data = response.json()\n",
-    "    if data.get('cod') != 200:\n",
-    "        return \"날씨 정보를 가져올 수 없습니다.\"\n",
-    "    temp = data['main']['temp']\n",
-    "    desc = data['weather'][0]['description']\n",
-    "    return f\"{city}의 현재 기온은 {temp}도이며, 날씨는 {desc}입니다.\""
+    "    # API 응답에 따른 처리\n",
+    "    if data.get(\"cod\") != 200:\n",
+    "        # 도시 정보를 찾지 못한 경우\n",
+    "        return f\"'{city}'의 날씨 정보를 찾을 수 없습니다.\"\n",
+    "    # 필요한 정보 파싱\n",
+    "    temp = data[\"main\"][\"temp\"]\n",
+    "    desc = data[\"weather\"][0][\"description\"]\n",
+    "    city_name = data[\"name\"]  # 응답에 있는 도시 이름 (영문일 수 있음)\n",
+    "    return f\"{city_name}의 현재 기온은 {temp}℃, 날씨는 {desc}입니다.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0eb38bfd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Seoul'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#pydantic 모델을 사용하여 입력값 검증\n",
-    "class WeatherInput(BaseModel):\n",
-    "    city: str = Field(description = \"날씨를 조회할 도시 이름(영문)\")\n",
+    "# pydantic 모델을 사용하여 입력값 검증\n",
+    "# class WeatherInput(BaseModel):\n",
+    "#     city : str = Field(description=\"날씨를 조회할 도시 이름(영문)\")\n",
     "\n",
-    "class MyClass:\n",
-    "    def __init__(self, ab:str):\n",
-    "        self.city = ab\n",
+    "# class MyClass:\n",
+    "#     def __init__(self, ab: str):\n",
+    "#         self.city = ab\n",
     "\n",
-    "MyClass(ab=100) # 사용자가 의도한 문자열이 전달되지 않아도 python은 타입에러를 발생시키지 않음\n",
-    "result = WeatherInput(city=100) #문자열이 아니면 Typeerror를 발생시킴. pydantic 모델을 사용했기 때문(validation check를 위해서)\n",
-    "# result = WeatherInput(city='Seoul') #이렇게 문자열로 넣어야만 작동함\n",
-    "result.city"
+    "# MyClass(ab=100)  # 사용자가 의도한 문자열이 전달되지 않아도 python은 타입에러를 발생시키지 않음\n",
+    "# result = WeatherInput( city=100)    # pydantic 모델은 타입에러를 발생시킴\n",
+    "# result.city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "3905bf69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Seoul의 현재 기온은 22.76도이며, 날씨는 연무입니다.'"
+       "'Seoul의 현재 기온은 25.76℃, 날씨는 약간의 구름이 낀 하늘입니다.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_weather('Seoul')"
+    "get_weather('seoul')"
    ]
   },
   {
@@ -196,34 +188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "4816aba9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel, Field\n",
-    "\n",
-    "# 입력 스키마\n",
     "class NewsInput(BaseModel):\n",
-    "    keyword: str = Field(description = \"뉴스를 조회할 키워드\")\n",
-    "\n",
+    "    keyword: str = Field(description=\"뉴스를 조회할 키워드\")\n",
+    "    \n",
     "def get_news(keyword:str) -> str:\n",
     "    import requests\n",
     "    api_key = os.getenv(\"NEWSAPI_KEY\")\n",
     "    url = \"https://newsapi.org/v2/everything\"\n",
     "    params = {\n",
-    "        \"q\" : keyword,\n",
-    "        \"apiKey\" : api_key,\n",
-    "        \"language\" : \"ko\",\n",
-    "        \"sortBy\" : \"publishedAt\", #최신뉴스\n",
-    "        \"pageSize\" : 1 #최근 1건\n",
+    "        \"q\": keyword,\n",
+    "        \"apiKey\": api_key,\n",
+    "        \"language\": \"ko\",\n",
+    "        \"sortBy\": \"publishedAt\",  #최신뉴스\n",
+    "        \"pageSize\": 1  # 최근 1건\n",
     "    }\n",
-    "    response = requests.get(url,params=params)\n",
-    "    data = response.json()\n",
+    "    response = requests.get(url, params=params)\n",
+    "    data = response.json()    \n",
     "    articles = data.get('articles')\n",
     "    if not articles:\n",
-    "        return \"해당 키워드에 대한 뉴스가 없습니다\"\n",
-    "    # 가장 첫번째 뉴스 선택\n",
+    "        return \"해당 키워드에 대한 뉴스가 없습니다.\"\n",
+    "    \n",
+    "    # 가장 첫번째 뉴스선택\n",
     "    top_news = articles[0]\n",
     "    title = top_news.get('title', '제목 없음')\n",
     "    source = top_news.get('source', {}).get('name', '출처 없음')\n",
@@ -232,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "98296ee0",
    "metadata": {},
    "outputs": [
@@ -240,12 +230,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "삼성전자에 대한 최신 뉴스: \"삼성전자, 6월까지 안드로이드 15 기반 '원UI 7' 업데이트 마무리\" (출처: Kbench.com)\n"
+      "취업에 대한 최신 뉴스: \"울산시, '광역 비자 시범 대상지'로 최종 선정\" (출처: Ohmynews.com)\n"
      ]
     }
    ],
    "source": [
-    "print(get_news('삼성전자'))"
+    "print(get_news('취업'))"
    ]
   },
   {
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "6821e1eb",
    "metadata": {},
    "outputs": [
@@ -269,35 +259,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tool 이름:get_weather 설명: 도시의 현재 날씨 정보를 반환합니다.\n",
-      "tool 이름:get_news 설명: 키워드에 대한 최신 뉴스 정보를 반환합니다\n"
+      "Tool 이름: get_weather, 설명: 도시 이름(영문)을 입력하면 현재 날씨를 알려주는 도구\n",
+      "Tool 이름: get_news, 설명: 키워드를 입력하면 관련된 최신 뉴스 제목을 알려주는 도구\n"
      ]
     }
    ],
    "source": [
     "from langchain_core.runnables import RunnableLambda\n",
-    "# 날씨함수 runnable -> tool 변환\n",
-    "weather_runnable = RunnableLambda(lambda x: get_weather(x['city']))\n",
+    "\n",
+    "# 날씨 함수 runnable -> tool 변환\n",
+    "weather_runnable = RunnableLambda(lambda input: get_weather(input[\"city\"]))\n",
     "weather_tool = weather_runnable.as_tool(\n",
-    "    name = \"get_weather\",\n",
-    "    description=\"도시의 현재 날씨 정보를 반환합니다.\",\n",
-    "    # arg_types={\"city\":str}\n",
-    "    args_schema= WeatherInput\n",
+    "    name=\"get_weather\",\n",
+    "    description=\"도시 이름(영문)을 입력하면 현재 날씨를 알려주는 도구\",\n",
+    "    args_schema=WeatherInput\n",
     ")\n",
-    "news_runnable = RunnableLambda(lambda x: get_news(x['keyword']))\n",
+    "\n",
+    "# 뉴스 함수 runnable -> tool 변환\n",
+    "news_runnable = RunnableLambda(lambda input: get_news(input[\"keyword\"]))\n",
     "news_tool = news_runnable.as_tool(\n",
-    "    name = \"get_news\",\n",
-    "    description=\"키워드에 대한 최신 뉴스 정보를 반환합니다\",\n",
-    "    # arg_types={\"keyword\":str}\n",
-    "    args_schema= NewsInput\n",
+    "    name=\"get_news\",\n",
+    "    description=\"키워드를 입력하면 관련된 최신 뉴스 제목을 알려주는 도구\",\n",
+    "    args_schema=NewsInput\n",
     ")\n",
-    "print(f'tool 이름:{weather_tool.name} 설명: {weather_tool.description}')\n",
-    "print(f'tool 이름:{news_tool.name} 설명: {news_tool.description}')"
+    "\n",
+    "print(f\"Tool 이름: {weather_tool.name}, 설명: {weather_tool.description}\")\n",
+    "print(f\"Tool 이름: {news_tool.name}, 설명: {news_tool.description}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
+   "id": "876da363",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#에이전트는 Tool이 필요하고, 그 tool은 함수기반. 아까는 RunnableLambda를 이용해서 실행가능한 툴이 선택되면 정해진 함수를 호출하도록 했는데,\n",
+    "#랭체인의 tool를 호출하도록 바꾸었다. \n",
+    "from langchain.tools import Tool\n",
+    "# 날씨함수 tool 변환\n",
+    "weather_tool = Tool(\n",
+    "    name = \"get_weather\",\n",
+    "    func = get_weather,\n",
+    "    description = \"도시의 현재 날씨 정보를 반환합니다.\",\n",
+    "    args_schema = WeatherInput\n",
+    ")\n",
+    "# 뉴스함수 tool 변환\n",
+    "news_tool = Tool(\n",
+    "    name=\"get_news\",\n",
+    "    func=get_news,\n",
+    "    description=\"키워드에 대한 최신 뉴스 정보를 반환합니다.\",\n",
+    "    args_schema=NewsInput\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "057cea23",
    "metadata": {},
    "outputs": [
@@ -305,12 +323,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='현재 서울의 날씨는 실시간으로 확인할 수 없지만, 일반적으로 10월의 서울은 가을 날씨로 쌀쌀하고 맑은 날이 많습니다. 평균 기온은 약 10도에서 20도 사이입니다. 구체적인 날씨 정보는 기상청 웹사이트나 날씨 앱을 통해 확인하시기 바랍니다. 추가로 궁금한 점이 있으면 말씀해 주세요!' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 92, 'prompt_tokens': 29, 'total_tokens': 121, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_62a23a81ef', 'id': 'chatcmpl-BbfBFGdXssSNhHMfY05AbzOqa0X69', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='run--f048f132-85a5-466a-bf29-136eba7e5546-0' usage_metadata={'input_tokens': 29, 'output_tokens': 92, 'total_tokens': 121, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "현재 서울의 날씨는 실시간으로 확인할 수 없지만, 일반적으로 10월의 서울은 가을 날씨로 쌀쌀하고 맑은 날이 많습니다. 평균 기온은 약 10도에서 20도 사이입니다. 구체적인 날씨 정보는 기상청 웹사이트나 날씨 앱을 통해 확인하시기 바랍니다. 추가로 궁금한 점이 있으면 말씀해 주세요!\n"
      ]
     }
    ],
    "source": [
-    "# 툴 없이\n",
+    "# 툴없이 \n",
     "from langchain_openai import ChatOpenAI\n",
     "# 프롬프트 템플릿\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -322,8 +340,8 @@
     "    (\"system\", \"당신은 날씨와 뉴스 정보를 제공하는 AI입니다.\"),\n",
     "    (\"human\", \"{question}\")\n",
     "])\n",
-    "llm = ChatOpenAI(model='gpt-4o-mini', temperature=0.0)\n",
-    "chain = user_prompt | llm\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.0)\n",
+    "chain = user_prompt | llm | StrOutputParser()\n",
     "# 사용자 질문을 처리하는 체인 실행\n",
     "result = chain.invoke({\"question\": user_question})\n",
     "print(result)"
@@ -339,42 +357,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "9d71682f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/9c/x8552y5x1ks7f22561j09f500000gn/T/ipykernel_50391/1587631345.py:15: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  result = llm(messages)  # LLM에 메시지 전달\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "현재 서울의 날씨는 연무이며, 기온은 약 24.76도입니다. 외출 시 가벼운 옷차림이 적합할 것 같습니다. 추가적인 날씨 정보가 필요하시면 말씀해 주세요!\n"
+      "현재 서울의 날씨는 약간의 구름이 낀 상태이며, 기온은 25.76℃입니다. 외출 시 가벼운 옷차림이 적합할 것 같습니다. 추가적인 날씨 정보가 필요하시면 말씀해 주세요!\n"
      ]
     }
    ],
    "source": [
     "from langchain.schema import AIMessage, HumanMessage, SystemMessage\n",
-    "# 프롬프트 구성: 시스템메시지 + 사용자 질문 + 결과를 맥락으로 제공\n",
+    "# 프롬프트구성 : 시스템메시지 + 사용자 질문 + 결과를 맥락으로 제공\n",
     "weather_info = get_weather('seoul')\n",
     "system_prompt = \"당신은 유용한 AI 어시스턴트입니다. 사용자 질문에 맞게 제공된 정보를 활용해 답변하세요\"\n",
     "tool_info_prompt = f'도구가 제공한 추가 정보:{weather_info}'\n",
-    "ask_prompt = '위 정보를 참고해서 사용자 질문에 답변하세요.'\n",
-    "#system message랑 Human은 고정, AI가 그거에 따라 답변해주고, 그 다음 Human이 답변함\n",
-    "#실제정보가 AI가 한 것처럼 change 해줄것..?\n",
+    "ask_prompt = '위 정보를 참고해서 사용자 질문에 답변하세요'\n",
     "messages = [\n",
     "    SystemMessage(content=system_prompt),\n",
     "    HumanMessage(content=user_question),\n",
-    "    AIMessage(content=tool_info_prompt), # 도구 결과를 마치 ai의 답변처럼 추가\n",
+    "    AIMessage(content=tool_info_prompt),  #도구 결과를 마치 ai의 답변처럼 추가가\n",
     "    HumanMessage(content=ask_prompt)\n",
     "]\n",
-    "result = llm(messages)  # LLM에 메시지 전달\n",
+    "result = llm(messages)   # LLM에 메시지 전달\n",
     "print(result.content)"
    ]
   },
@@ -388,15 +396,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "45da7d70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/9c/x8552y5x1ks7f22561j09f500000gn/T/ipykernel_50391/2422807154.py:7: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+      "  agent = initialize_agent(\n"
+     ]
+    }
+   ],
    "source": [
-    "# 에이전트를 생성하고 등록\n",
     "from langchain.agents import initialize_agent, AgentType\n",
-    "# 앞에서 만든 tool 객체 리스트를 준비\n",
-    "tools = [weather_tool, news_tool]"
+    "\n",
+    "# 앞서 만든 Tool 객체 리스트 준비\n",
+    "tools = [weather_tool, news_tool]\n",
+    "\n",
+    "# OpenAI 함수 기반 에이전트 생성\n",
+    "agent = initialize_agent(\n",
+    "    tools=tools,\n",
+    "    llm=llm,\n",
+    "    agent=AgentType.OPENAI_FUNCTIONS,\n",
+    "    verbose=True  # intermediate 단계 로그를 출력하여 확인\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b24a6f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/9c/x8552y5x1ks7f22561j09f500000gn/T/ipykernel_50391/3655241916.py:2: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  result1 = agent.run(query1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `get_weather` with `{'city': 'Seoul'}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3mSeoul의 현재 기온은 25.76℃, 날씨는 약간의 구름이 낀 하늘입니다.\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `get_news` with `{'keyword': 'AI'}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3mAI에 대한 최신 뉴스: \"무섭게 오르는 계란·닭고기 가격…농경연 “2분기 가격 강세 전망”\" (출처: Khan.co.kr)\u001b[0m\u001b[32;1m\u001b[1;3m현재 서울의 날씨는 약간의 구름이 낀 하늘이며, 기온은 25.76℃입니다.\n",
+      "\n",
+      "AI 관련 최신 뉴스는 \"무섭게 오르는 계란·닭고기 가격…농경연 “2분기 가격 강세 전망”\"입니다. (출처: Khan.co.kr)\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Agent Result 1: 현재 서울의 날씨는 약간의 구름이 낀 하늘이며, 기온은 25.76℃입니다.\n",
+      "\n",
+      "AI 관련 최신 뉴스는 \"무섭게 오르는 계란·닭고기 가격…농경연 “2분기 가격 강세 전망”\"입니다. (출처: Khan.co.kr)\n"
+     ]
+    }
+   ],
+   "source": [
+    "query1 = \"서울의 날씨와 AI 관련 최신 뉴스를 알려줘.\"\n",
+    "result1 = agent.run(query1)\n",
+    "print(\"Agent Result 1:\", result1)"
    ]
   }
  ],
